<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#474747"
    tools:context=".settings">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="@color/statusbar"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/menubutton" />


        <ImageView
            android:layout_width="17dp"
            android:layout_height="37dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="30dp"
            android:contentDescription="TODO"
            android:src="@drawable/img" />

        <ImageView
            android:layout_width="47dp"
            android:layout_height="37dp"
            android:layout_marginTop="29dp"
            android:src="@drawable/img_1" />


        <ImageView
            android:layout_width="47dp"
            android:layout_height="37dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/img_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/_100"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/img_3" />

    </LinearLayout>

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/soundtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/soundswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Switchsound"
        android:textColor="@color/sec_main_color"
        android:textOff="OFF"
        android:textOn="ON"
        android:textSize="25sp"
        android:textStyle="bold"
        android:thumb="@drawable/sw_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toEndOf="@+id/soundtext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221"
        app:showText="true"
        app:track="@drawable/sw_track" />

    <View
        android:id="@+id/view2"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/vibrotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibro"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.300" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/vibroswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Switchvibro"
        android:textColor="@color/sec_main_color"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="25sp"
        android:textStyle="bold"
        android:thumb="@drawable/sw_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toEndOf="@+id/vibrotext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291"
        app:showText="true"
        app:track="@drawable/sw_track" />

    <View
        android:id="@+id/view3"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.334" />


    <ToggleButton
        android:id="@+id/geSelect"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:background="@drawable/lang1"
        android:textColor="#FFFFFF"
        android:textOff=" "
        android:textOn=" "
        android:textSize="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.116" />

    <ToggleButton
        android:id="@+id/enSelect"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/lang2"
        android:textColor="#FFFFFF"
        android:textSize="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ptSelect"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/geSelect"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.116" />

    <ToggleButton
        android:id="@+id/ptSelect"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/lang3"
        android:textColor="#FFFFFF"
        android:textSize="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.116" />


</androidx.constraintlayout.widget.ConstraintLayout>